Added it so you can call individual achievements.
